# kley

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_RU.md  SPEC.md  TODO.md  dist-workspace.toml  rust-analyzer.toml  rustfmt.toml
.github/workflows/: ci.yml  publish-crates.sh.yml  release.yml
benches/: publish_install.rs
docs/: KANBAN.md  SPEC.md
docs/demo/: scenario_0.tape  scenario_1.tape  scenario_2.tape
docs/epics/: I-core-publishing.md  I.md  II.md  III.md  IV.md  V.md
docs/milestones/: M1-mvp.md  M2-extended.md
docs/superpowers/plans/: 2026-05-31-f27-fast-reinstall.md
docs/tickets/: 001-push-command.md  002-ignore-crate.md  003-auto-pkg-json.md  005-refactor-main.md  006-kley-lock.md  007-remove-command.md  008-preserve-pkg-order.md  009-link-command.md  010-link-global-flag.md  011-update-command.md  012-list-command.md  013-unpublish-command.md  014-clean-command.md  015-installation-registry.md  016-enhance-kley-lock.md  017-implement-install-command.md  018-robust-pm-detection.md  019-fast-install-optimization.md  019-strip-dev-dependencies.md  020-install-no-args-as-update.md  021-install-dev-flag.md  022-fix-normalized-path-windows-unc.md  023-retreat-restore-commands.md  024-publish-changed-flag.md  025-lifecycle-scripts.md  026-kleyrc-config.md  027-check-command.md  028-fast-install-optimization.md  029-fast-reinstall-skip-pm.md  030-publish-push-deletes-deps.md  b-1.md  b-2.md  f-1.md  f-10.md  f-11.md  f-12.md  f-13.md  f-14.md  f-15.md  f-16.md  (+28 more)
scripts/: demo-prepare.sh  demo-record.sh  publish-crates.sh
src/: commands.rs  lib.rs  lockfile.rs  main.rs  npm_package.rs  package.rs  registry.rs  utils.rs
src/commands/: add.rs  install.rs  link.rs  publish.rs  remove.rs  unpublish.rs  update.rs
tests/: add_command_preserves_order_test.rs  add_version_test.rs  install_command_test.rs  install_no_save_test.rs  link_command_test.rs  pm_detection_test.rs  publish_command_test.rs  publish_push_test.rs  registry_integration_test.rs  remove_command_test.rs  unpublish_command_test.rs  update_command_test.rs
tests/common/: mod.rs
tests/mocks/: npm  npm.cmd  npm.js  npm.sh  pnpm  pnpm.cmd  pnpm.js  pnpm.sh  yarn  yarn.cmd  yarn.js  yarn.sh
