[package]
name = "kley"
version = "0.1.0"
edition = "2024"
authors = ["sumbad"]
description = "Fast and reliable local package manager for npm (JS/TS)"
repository = "https://github.com/sumbad/kley"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "5.0.1"
fs_extra = "1.3.0"
ignore = "0.4.25"
indicatif = "0.17.8"
notify = "6.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
