[package]
name = "kley"
version = "0.2.0"
edition = "2024"
authors = ["sumbad"]
description = "Fast and reliable local package manager for npm (JS/TS)"
homepage = "https://github.com/sumbad/kley"
repository = "https://github.com/sumbad/kley"
license = "MIT"

[package.metadata.dist]
npm-package = "kley-cli"


[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
fs_extra = "1.3.0"
ignore = "0.4.25"
indicatif = "0.18.4"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.0"
tempfile = "3.10.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
