[package]
name = "kley"
version = "0.7.0"
edition = "2024"
rust-version = "1.93"
authors = ["Denis Sumbaev <denis.sumbaev@gmail.com>"]
description = "The simple local package manager for npm (JS/TS)"
homepage = "https://github.com/sumbad/kley"
repository = "https://github.com/sumbad/kley"
license = "MIT"

[package.metadata.dist]
npm-package = "kley-cli"


[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
fs_extra = "1.3.0"
ignore = "0.4.25"
indicatif = "0.18.4"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.0"
serde_json = "1.0.149"
tempfile = "3.10.1"
test-log = {version = "0.2", features = ["trace"]}

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
